tests/errors/preprocessor/segmentation/core_dump/after_preproces_words_must_be_space_3.c
#define K #define KE 1 #include "test.c"
K
KE
int main ()
{
	return 0;
}